WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215740
[macOS] Unable to copy text from the function browser panel in Numbers
https://bugs.webkit.org/show_bug.cgi?id=215740
Summary
[macOS] Unable to copy text from the function browser panel in Numbers
Wenson Hsieh
Reported
2020-08-21 15:03:46 PDT
<
rdar://problem/65189303
>
Attachments
Patch
(12.54 KB, patch)
2020-08-21 16:24 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Rebase on trunk
(11.95 KB, patch)
2020-08-21 16:28 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-08-21 16:24:37 PDT
Comment hidden (obsolete)
Created
attachment 407030
[details]
Patch
Wenson Hsieh
Comment 2
2020-08-21 16:28:19 PDT
Created
attachment 407031
[details]
Rebase on trunk
Darin Adler
Comment 3
2020-08-21 16:52:55 PDT
Comment on
attachment 407031
[details]
Rebase on trunk Wow, this sure makes WKFlippedView more complicated ;) Great solution.
Wenson Hsieh
Comment 4
2020-08-21 17:50:38 PDT
Comment on
attachment 407031
[details]
Rebase on trunk Thanks for the review! (In reply to Darin Adler from
comment #3
)
> Comment on
attachment 407031
[details]
> Rebase on trunk > > Wow, this sure makes WKFlippedView more complicated ;)
😅
> > Great solution.
EWS
Comment 5
2020-08-21 17:52:52 PDT
Committed
r266021
: <
https://trac.webkit.org/changeset/266021
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 407031
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug